--- a/src/app/[locale]/work/projects/en/building-once-ui-a-customizable-design-system.mdx
+++ b/src/app/[locale]/work/projects/en/building-once-ui-a-customizable-design-system.mdx
@@ -1,45 +1,37 @@
 ---
-title: "Building Once UI, a Customizable Design System"
-publishedAt: "2024-04-08"
-summary: "Development of a flexible and highly customizable design system using Next.js for front-end and Figma for design collaboration."
-images:
-  - "/images/projects/project-01/cover-01.jpg"
-  - "/images/projects/project-01/cover-02.jpg"
-  - "/images/projects/project-01/cover-03.jpg"
-  - "/images/projects/project-01/cover-04.jpg"
-team:
-  - name: "Selene Yu"
-    role: "Software Engineer"
-    avatar: "/images/avatar.jpg"
-    linkedIn: "https://www.linkedin.com/company/once-ui/"
-  - name: "Jane Smith"
-    role: "Product Manager"
-    avatar: "/images/projects/project-01/avatar-01.png"
-    linkedIn: "https://www.linkedin.com/company/once-ui/"
+title: "Creating Simple VPN: A Privacy-First VPN Solution"
+publishedAt: "2023-11-12"
+summary: "Development of a privacy-first VPN application supporting multiple protocols, with a custom backend and frontend interface."
 ---
 
 ## Overview
 
-Development of a flexible and highly customizable design system using Next.js for front-end and Figma for design collaboration.
+Development of Simple VPN, a robust VPN application designed with a privacy-first approach. The application supports multiple protocols, including WireGuard, OpenVPN, TOR, and LokiNet. The project encompassed both backend and frontend development, ensuring seamless functionality and a user-friendly interface.
 
 ## Key Features
 
-- **Component Library**: Built a set of modular, reusable UI components using React and styled-components in Next.js, focusing on accessibility and responsiveness.
-- **Theming and Customization**: Integrated a theming system that allows easy switching and customization of color palettes, typography, and layout styles using CSS variables and Figma tokens.
-- **Figma Integration**: Collaborated closely with designers by setting up a shared design library in Figma. This library was synchronized with the codebase, ensuring design handoffs were seamless and that design tokens remained consistent across both platforms.
-- **Documentation and Usage Guidelines**: Developed comprehensive documentation with Storybook to showcase components, usage patterns, and best practices, ensuring the design system is easy to adopt by other teams.
+- **Protocol Support**: Implemented support for a wide range of VPN protocols, including:
+  - **WireGuard**: For high-speed, modern, and secure connections.
+  - **OpenVPN**: Providing reliable and widely compatible connectivity.
+  - **TOR**: Enabling anonymous browsing by routing traffic through the TOR network.
+  - **LokiNet**: Offering additional privacy and censorship resistance.
+
+- **Privacy-First Architecture**: Designed to prioritize user privacy with strict no-logs policies and encrypted data communication.
+
+- **Custom Backend**: Built a scalable backend to manage user authentication, session handling, and server management for a smooth VPN experience.
+
+- **Frontend Interface**: Developed an intuitive and responsive user interface to allow users to easily configure settings, switch protocols, and monitor connection status.
 
 ## Technologies Used
 
-- **Next.js**: For fast, server-rendered React applications.
-- **Figma**: For creating and managing design assets and prototypes.
-- **Styled-Components**: For styling React components with a modular, themable approach.
-- **Storybook**: For building an interactive, documented component library.
+- **Backend**: Implemented using python to ensure a modern, secure server that can handle protocol integrations and user management.
+- **Frontend**: Developed a cross-platform user interface using responsive design principles to ensure accessibility on various devices.
+- **Encryption Standards**: Leveraged advanced encryption techniques to ensure data confidentiality and integrity.
 
 ## Challenges and Learnings
 
-One key challenge was balancing the need for flexibility with the desire to maintain design consistency. The solution involved creating well-defined design tokens and establishing clear guidelines for when and how components could be customized. Additionally, setting up effective collaboration workflows between designers and developers using Figma and Git was a learning experience that greatly improved the process.
+Creating a VPN solution that supports multiple protocols required addressing compatibility issues and optimizing performance across various network conditions. Implementing the TOR and LokiNet protocols presented unique challenges, particularly in maintaining speed while ensuring anonymity. Through rigorous testing and iteration, we achieved a balance between security and usability.
 
 ## Outcome
 
-The design system is now actively used across multiple projects, leading to faster development cycles, fewer design inconsistencies, and improved collaboration between design and development teams. It has become a foundation for scaling our products efficiently while ensuring a cohesive user experience.
+Simple VPN has been successfully deployed, providing users with a secure and versatile VPN solution.
