--- a/src/app/[locale]/work/projects/en/simple-portfolio-builder.mdx
+++ b/src/app/[locale]/work/projects/en/simple-portfolio-builder.mdx
@@ -1,6 +1,46 @@
 ---
-title: "Simple portfolio creator built with Once UI and Next.js"
-publishedAt: "2024-04-08"
-images:
-  - "/images/projects/project-01/video-01.mp4"
+title: "Porting LibOQS to Flutter for Post-Quantum Safe Encryption"
+publishedAt: "2024-08-08"
+summary: "Development of a Flutter library for Android enabling post-quantum encryption using algorithms from the NIST Open Quantum Safe project."
 ---
+
+## Overview
+
+In this project, I ported the LibOQS library to Flutter, enabling Android applications to implement post-quantum safe encryption. The library supports a comprehensive range of key encapsulation mechanisms (KEMs) and signature schemes endorsed by the NIST Open Quantum Safe project. This effort brings state-of-the-art cryptographic techniques to mobile app development, enhancing security for future-proof applications.
+
+## Key Features
+
+- **Comprehensive Algorithm Support**: Access to all algorithms supported by the NIST Open Quantum Safe project, including:
+  - **Key Encapsulation Mechanisms (KEMs)**:
+    - **BIKE**: BIKE-L1, BIKE-L3, BIKE-L5
+    - **Classic McEliece**: Classic-McEliece-348864†, Classic-McEliece-348864f†, Classic-McEliece-460896†, Classic-McEliece-460896f†, Classic-McEliece-6688128†, Classic-McEliece-6688128f†, Classic-McEliece-6960119†, Classic-McEliece-6960119f†, Classic-McEliece-8192128†, Classic-McEliece-8192128f†
+    - **FrodoKEM**: FrodoKEM-640-AES, FrodoKEM-640-SHAKE, FrodoKEM-976-AES, FrodoKEM-976-SHAKE, FrodoKEM-1344-AES, FrodoKEM-1344-SHAKE
+    - **HQC**: HQC-128, HQC-192, HQC-256†
+    - **Kyber**: Crystals-Kyber512, Crystals-Kyber768, Crystals-Kyber1024
+    - **NTRU-Prime**: sntrup761
+
+  - **Signature Schemes**:
+    - **CRYSTALS-Dilithium**: Dilithium2, Dilithium3, Dilithium5
+    - **Falcon**: Falcon-512, Falcon-1024
+    - **SPHINCS+** (SHA2 and SHAKE): Multiple configurations, including 128f-simple, 128s-simple, 192f-simple, 192s-simple, 256f-simple, and 256s-simple
+
+- **Secure Encryption**: Implements cutting-edge cryptographic methods to ensure data confidentiality and resistance to quantum computing threats.
+
+## Technologies Used
+
+- **LibOQS**: Core library providing quantum-safe cryptographic algorithms.
+- **Flutter/Dart**: Framework for building cross-platform applications with a focus on Android integration.
+- **FFI (Foreign Function Interface)**: Used to bridge the native LibOQS library with Flutter.
+- **NIST Open Quantum Safe Project**: Algorithms vetted and supported by this initiative to ensure industry-standard security.
+
+## Challenges and Learnings
+
+Porting LibOQS to Flutter required in-depth understanding of both native library integration and Flutter’s FFI system. Challenges included managing dependencies between Dart and C, ensuring efficient memory usage, and optimizing the library for mobile devices. Debugging cross-language issues was a significant learning experience, enhancing my skills in low-level programming and performance optimization.
+
+## Outcome
+
+The ported library is now available on GitHub, empowering developers to integrate post-quantum safe encryption into their Android applications effortlessly. This project demonstrates the feasibility and importance of preparing mobile applications for a quantum-safe future.
+
+## GitHub Repository
+
+The ported library is accessible here: [liboqs-flutter](https://github.com/Erebus9456/liboqs-flutter)
